[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
config = "0.14.0"
lazy_static = "1.4.0"
reqwest = {version = "0.12.4",features = ["json"]}
tokio = {version = "1.37.0",features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18",features = ["local-time","time"]}
clap = {version = "4.5.4",features = ["derive"]}
serde = {version = "1.0.200",features = ["derive"]}
serde_json = "1.0.116"
regex = "1.10.4"
strum = { version = "0.26", features = ["derive"] }
chrono = {version = "0.4.38",features = ["serde"]}
indexmap = "2.2.6"
toml = "0.8.13"
futures = "0.3.30"
nvml-wrapper = "0.10.0"
time = {version = "0.3.36",features = ["macros"]}
ssh2 = "0.9.4"
hickory-resolver = {version = "0.24.1",features = ["tokio-runtime"]}
